add data project

--- a/src/App.css
+++ b/src/App.css
@@ -258,19 +258,23 @@
 }
 
 .project-left-text{
-    width: 400px;
+    width: 320px;
     color: white;
 }
 
 .project-right-img {
-    width: 310px;
+    width: 380px;
+    display: block;
 }
+
+
 
 
 .project-name {
     font-family: 'NotoSansJP-Black';
     font-size: 36px;
     margin-bottom: 10px;
+   
 }
 .project-type {
     font-family: 'NotoSansJP-Bold';
@@ -562,11 +566,11 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    
 }
  .column {
      width: 370px;
-     padding: 0px !important
+     padding-top: 0px !important;
+     padding-bottom: 40px !important;
  }
 
  /*porject-special*/
@@ -626,15 +630,49 @@
     box-shadow: 0 0 20px 1px rgba(190, 190, 190, 0.31);
 }
 
+/*OPPO datadashboard*/
+.datadashboard .white {
+    background: white;
+    color: black;
+    padding: 50px 0 50px 0;
+}
 
+.datadashboard .grey {
+    background: #081c15;
+    color: white;
+    padding: 50px 0 50px 0;
+}
 
- /*toogle*/
- .toggleBar {
-     display: flex;
-     justify-content: space-around;
-     margin-top: 30px;
-     margin-bottom: 15px;
- }
+.datadashboard .lightgrey {
+    background: #d8f3dc;
+    color: black;
+    padding: 50px 0 50px 0;
+}
+
+.datadashboard .green {
+    background: #007f5f;
+    color: white;
+    padding: 50px 0 50px 0;
+}
+
+.datadashboard .sub-task {
+    width: 100%;
+    display: block !important;
+    padding: 40px 25px 40px 25px;
+    margin-top: 30px;
+    background: white;
+    color: black !important;
+}
+.hierachy{
+    list-style-type: none;
+}
+/*toogle*/
+.toggleBar {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
 
 .toggleButton {
     padding: 5px 10px;
