--- a/src/App.css
+++ b/src/App.css
@@ -538,6 +538,13 @@
     flex-wrap: wrap;
 }
 
+.content-figure-bg {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 .content-figure-two {
     width: 100%;
     margin: 20px auto 20px auto;
@@ -665,6 +672,12 @@
 }
 .hierachy{
     list-style-type: none;
+}
+
+.datadashboard .body-wide{
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
 }
 /*toogle*/
 .toggleBar {
